--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV["GRRSS_DATABASE_HOST"] %>
+  username: <%= ENV["GRRSS_DATABASE_USERNAME"] %>
+  password: <%= ENV["GRRSS_DATABASE_PASSWORD"] %>
 
 development:
   <<: *default
@@ -82,5 +85,5 @@ test:
 production:
   <<: *default
   database: grrss_production
-  username: grrss
+  username: <%= ENV["GRRSS_DATABASE_USERNAME"] %>
   password: <%= ENV["GRRSS_DATABASE_PASSWORD"] %>
