Move rails app under ror subdirectory

--- a/ror/Gemfile
+++ b/ror/Gemfile
@@ -78,3 +78,5 @@ gem "slim-rails", "~> 3.6"
 gem "dotenv-rails", "~> 2.8", groups: [:development, :test]
 
 gem "bunny", "~> 2.22"
+
+gem "pry", "~> 0.14.2"
