--- a/ror/.env.sample
+++ b/ror/.env.sample
@@ -3,3 +3,4 @@ GRRSS_DATABASE_HOST=0.0.0.0
 GRRSS_DATABASE_NAME=grrss
 GRRSS_DATABASE_USERNAME=grrss
 GRRSS_DATABASE_PASSWORD=grrss_secret
+RABBITMQ_URL=amqp://grrss:grrss_secret@localhost:5672
