--- a/ror/Gemfile
+++ b/ror/Gemfile
@@ -54,6 +54,10 @@ gem "bootsnap", require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem "faker"
+  gem "pry-rails", "~> 0.3.9"
 end
 
 group :development do
@@ -78,5 +82,3 @@ gem "slim-rails", "~> 3.6"
 gem "dotenv-rails", "~> 2.8", groups: [:development, :test]
 
 gem "bunny", "~> 2.22"
-
-gem "pry", "~> 0.14.2"
