Add Whenever gem

--- a/ror/Gemfile
+++ b/ror/Gemfile
@@ -82,3 +82,4 @@ gem "slim-rails", "~> 3.6"
 gem "dotenv-rails", "~> 2.8", groups: [:development, :test]
 
 gem "bunny", "~> 2.22"
+gem "whenever", require: false
