--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+    restart: always
 
   rabbitmq:
     image: rabbitmq:management-alpine
@@ -43,6 +44,7 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+    restart: always
 
   rss_service:
     build:
@@ -57,6 +59,7 @@ services:
       - grrss_network
     environment:
       - RABBITMQ_URL=amqp://grrss:grrss_secret@rabbitmq:5672
+    restart: always
 
   ror:
     build:
@@ -77,6 +80,7 @@ services:
       - GRRSS_DATABASE_PASSWORD=grrss_secret
     ports:
       - 3000:3000
+    restart: always
 
 volumes:
   db-data:
