Add ability to set whitelisted hosts ro RoR app

--- a/ror/.env.development.sample
+++ b/ror/.env.development.sample
@@ -4,3 +4,4 @@ GRRSS_DATABASE_NAME=grrss
 GRRSS_DATABASE_USERNAME=grrss
 GRRSS_DATABASE_PASSWORD=grrss_secret
 RABBITMQ_URL=amqp://grrss:grrss_secret@localhost:5672
+WHITELISTED_HOSTS=localhost
