--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,9 @@ services:
     networks:
       - grrss_network
     healthcheck:
-      test: [ "CMD", "nc", "-z", "localhost", "5672" ]
+      test: [ "CMD", "rabbitmqctl", "status"]
       interval: 5s
-      timeout: 10s
+      timeout: 20s
       retries: 5
     restart: unless-stopped
 
@@ -54,7 +54,7 @@ services:
       db:
         condition: service_healthy
       rabbitmq:
-          condition: service_healthy
+        condition: service_healthy
     networks:
       - grrss_network
     environment:
