Use different port for Postgres

--- a/ror/.env.test.sample
+++ b/ror/.env.test.sample
@@ -3,4 +3,5 @@ GRRSS_DATABASE_HOST=0.0.0.0
 GRRSS_DATABASE_NAME=grrss
 GRRSS_DATABASE_USERNAME=grrss
 GRRSS_DATABASE_PASSWORD=grrss_secret
+GRRSS_DATABASE_PORT=5432
 RABBITMQ_URL=amqp://grrss:grrss_secret@localhost:5672
